--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
 			<section></section>
 		</article>
 	</main>
-	<footer></footer>
+	<footer>
+		<nav>
+			<ul class="li"><a href=""></a></ul>
+			<ul class="li"><a href=""></a></ul>
+			<ul class="li"><a href=""></a></ul>
+		</nav>
+	</footer>
 </body>
 </html>
