--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
 		</nav>
 	</header>
 	<main>
-		<article></article>
+		<article>
+			<section></section>
+		</article>
 		<article>
 			<section></section>
 		</article>
