--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>R2D2</title>
+	<title>Ver 1.0</title>
 </head>
 <body>
 	<header>
