--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
 		<article>
 			<section></section>
 		</article>
+		<article>
+			<section></section>
+		</article>
 	</main>
 	<footer>
 		<nav>
